# Protocolos-de-Comunicacao

./: .gitignore  README.md
CAN/CanReceiver/: CMakeLists.txt
CAN/CanReceiver/main/: main.c
CAN/CanTransmitter/: CMakeLists.txt
CAN/CanTransmitter/main/: main.cpp
CAN/CanTransmitter/main/inc/: mcp2515.h
CanReceiver/main/: main.c
CanTransmitter/main/: CMakeLists.txt  main.cpp
CanTransmitter/main/src/: mcp2515.cpp
Master-Slave/: master.py  slave_descricao.py  slave_previsao.py  slave_temperatura.py  slave_umidade.py
NFC/: CMakeLists.txt  sdkconfig  sdkconfig.old
NFC/main/: CMakeLists.txt  NFC.c
Server-Client/: client.py  server.py
